--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   xhr.open('GET','/netsmusic/cate.json',true);
   xhr.send();
   xhr.onload = function(data){
-    console.log(data)
+   var data = xhr.responseText;
+    console.log(data);
   }
  
  </script>
